// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders a form component 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="mocked-default-widget"
          id="mocked-field-title"
        >
          The title
           - 
          No description
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form renders a form component with defaults in the schema 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="mocked-default-widget"
          id="mocked-field-title"
        >
          The title
           - 
          No description
          This is the default
        </div>
      </div>
    </div>
  </div>
</div>
`;
